--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-      <h1> Hellom gitaction course </h1>
+      <h1> Hello course git action course </h1>
 </body>
 </html>
 
