--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-      <h1> Git Action course. </h1>
+      <h1> Git Action variable variable  access git actions. </h1>
 </body>
 </html>
 
